--- a/src/main/resources/templates/administrador/dashboard.html
+++ b/src/main/resources/templates/administrador/dashboard.html
@@ -4,49 +4,180 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COMVE</title>
+    <title>SIGEV</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-
-    <style>
-      li {
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <div th:insert="~{fragments/header :: header}"></div>
-    <div class="container">
+  <div class="d-flex">
+    <div th:insert="~{fragments/sideBar :: sideBar}"></div>
 
-      <div class="card flex-md-row mb-4 box-shadow h-md-250">
-        <div class="card-body d-flex flex-column align-items-start">
-          <h3 class="mb-0">
-            <a class="text-dark" >Bienvenido Administrador</a>
-          </h3>
+    <div class="w-100">
+      <div th:insert="~{fragments/navBar :: navBar}"></div>
+      <button id="btnSide" type="button" class="btn bg-main btn-circle sticky-top m-2"><i class="fa-sharp fa-solid fa-bars"></i></button>
+
+      <div id="content" class="container ">
+        <div class="row">
+          <!-- lado1 -->
+          <div class="col-md-7">
+            <!-- CardAdiminstradores -->
+            <div class="card mb-3 bg-card shadow border-0" style="border-radius: 0%;">
+              <div class="card-header border-0 d-flex align-items-center">
+                <h2>Administradores </h2>
+                <h3 class="ms-auto "><i class="fa-solid fa-arrow-right pointer"></i></h3>
+              </div>
+              <div class="card-body mt-2">
+                <div class="d-flex align-items-center mb-4" style="margin-left: 20px;">
+                  <div class="flex-shrink-0">
+                    <img class="imgRedonda"
+                         src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                         alt="...">
+                  </div>
+                  <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                    Nombre del administrador
+                  </div>
+                </div>
+                <div class="d-flex align-items-center mb-4" style="margin-left: 20px;">
+                  <div class="flex-shrink-0">
+                    <img class="imgRedonda"
+                         src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                         alt="...">
+                  </div>
+                  <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                    Nombre del administrador
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- CardEnlaces -->
+            <div class="card mb-3 bg-card shadow border-0" style="border-radius: 0%;">
+              <div class="card-header border-0 d-flex align-items-center">
+                <h2>Enlaces</h2>
+                <h3 class="ms-auto "><i class="fa-solid fa-arrow-right pointer"></i></h3>
+              </div>
+              <div class="card-body ">
+                <div class="d-flex align-items-center mb-4" style="margin-left: 20px;">
+                  <div class="flex-shrink-0">
+                    <img class="imgRedonda"
+                         src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                         alt="...">
+                  </div>
+                  <div class="flex-grow-1 ms-3">
+                    <h5 class="mt-3">Nombre del Enlace</h5>
+                    <p style="margin-top: -7px;">Municipio</p>
+                  </div>
+                </div>
+                <div class="d-flex align-items-center mb-4" style="margin-left: 20px;">
+                  <div class="flex-shrink-0">
+                    <img class="imgRedonda"
+                         src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                         alt="...">
+                  </div>
+                  <div class="flex-grow-1 ms-3">
+                    <h5 class="mt-3">Nombre del Enlace</h5>
+                    <p style="margin-top: -7px;">Municipio</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <!-- CardCategorias -->
+            <div class="card mb-3 bg-card shadow-lg border-0" style="border-radius: 0%;">
+              <div class="card-header border-0 d-flex align-items-center">
+                <h2>Categorías</h2>
+                <h3 class="ms-auto "><i class="fa-solid fa-arrow-right pointer"></i></h3>
+              </div>
+              <div class="card-body mt-2 ">
+                <div class="d-flex justify-content-around" style="font-size: 20px;">
+                  <p>Categoría</p>
+                  <p>Categoría</p>
+                  <p>Categoría</p>
+                </div>
+                <div class="d-flex justify-content-around" style="font-size: 20px;">
+                  <p>Categoría</p>
+                  <p>Categoría</p>
+                  <p>Categoría</p>
+                </div>
+              </div>
+            </div>
+          </div>
+
+          <!-- lado2 -->
+          <div class="col-md-5">
+            <!-- CardTema -->
+            <div class="card mb-3 bg-card shadow border-0" style="border-radius: 0%;">
+              <div class="card-header border-0 d-flex align-items-center">
+                <h2>Tema</h2>
+                <h3 class="ms-auto "><i class="fa-solid fa-arrow-right pointer"></i></h3>
+              </div>
+              <div class="card-body mt-2 ">
+                <div class="d-flex justify-content-around p-5" style="padding: 5px;">
+                  <div class="bg-main tema-square"></div>
+                  <div class="bg-colorSecon tema-square"></div>
+                  <div class="bg-text1 tema-square"></div>
+                  <div class="bg-text2 tema-square"></div>
+                </div>
+
+              </div>
+            </div>
+
+            <!-- CardMunicipios -->
+            <div class="card mb-3 bg-card shadow-lg border-0" style="border-radius: 0%;">
+              <div class="card-header border-0 d-flex align-items-center">
+                <h2>Municipios</h2>
+                <h3 class="ms-auto "><i class="fa-solid fa-arrow-right pointer"></i></h3>
+              </div>
+              <div class="card-body mt-2 ">
+                <div class="d-flex align-items-center mb-4" style="margin-left: 20px;">
+                  <div class="flex-shrink-0">
+                    <img class="imgMunicipio"
+                         src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Escudo_Emiliano_Zapata.jpg"
+                         alt="...">
+                  </div>
+                  <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                    Nombre del municipio
+                  </div>
+                </div>
+                <div class="d-flex align-items-center mb-4" style="margin-left: 20px;">
+                  <div class="flex-shrink-0">
+                    <img class="imgMunicipio"
+                         src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Escudo_Emiliano_Zapata.jpg"
+                         alt="...">
+                  </div>
+                  <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                    Nombre del municipio
+                  </div>
+                </div>
+                <div class="d-flex align-items-center mb-4" style="margin-left: 20px;">
+                  <div class="flex-shrink-0">
+                    <img class="imgMunicipio"
+                         src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Escudo_Emiliano_Zapata.jpg"
+                         alt="...">
+                  </div>
+                  <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                    Nombre del municipio
+                  </div>
+                </div>
+                <div class="d-flex align-items-center mb-4" style="margin-left: 20px;">
+                  <div class="flex-shrink-0">
+                    <img class="imgMunicipio"
+                         src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Escudo_Emiliano_Zapata.jpg"
+                         alt="...">
+                  </div>
+                  <div class="flex-grow-1 ms-3" style="font-size: 22px;">
+                    Nombre del municipio
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-        <img width="25%" height="25%" class="card-img-right flex-auto d-none d-md-block" src="https://st2.depositphotos.com/5266903/9616/v/950/depositphotos_96165688-stock-illustration-user-group-icon.jpg"  data-holder-rendered="true">
       </div>
     </div>
-    </div>
-    <!--<script th:src="@{/js/bootstrap.min.js}"></script>-->
-    <!--Ionicons-->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
+  </div>
 
     <script th:src="@{/js/toast.min.js}"></script>
 
