--- a/src/main/resources/templates/enlace/dashboard.html
+++ b/src/main/resources/templates/enlace/dashboard.html
@@ -5,48 +5,33 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>COMVE</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-      integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm"
-      crossorigin="anonymous"
-    />
-
-    <style>
-      li {
-        text-decoration: none;
-      }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
-    <div th:insert="~{fragments/header :: header}"></div>
-    <div class="container">
+  <div class="d-flex">
+    <div th:insert="~{fragments/sideBar :: sideBar}"></div>
 
+    <div class="w-100">
+      <div th:insert="~{fragments/navBar :: navBar}"></div>
+      <button id="btnSide" type="button" class="btn bg-main btn-circle sticky-top m-2"><i class="fa-sharp fa-solid fa-bars"></i></button>
 
-      <div class="card flex-md-row mb-4 box-shadow h-md-250">
-        <div class="card-body d-flex flex-column align-items-start">
-          <h3 class="mb-0">
-            <a class="text-dark" >Bienvenido Enlace</a>
-          </h3>
+      <div id="content" class="container ">
+        <div class="card flex-md-row mb-4 box-shadow h-md-250">
+          <div class="card-body d-flex flex-column align-items-start">
+            <h3 class="mb-0">
+              <a class="text-dark" >Bienvenido Enlace</a>
+            </h3>
+          </div>
+          <img width="25%" height="25%" class="card-img-right flex-auto d-none d-md-block" src="https://st2.depositphotos.com/5266903/9616/v/950/depositphotos_96165688-stock-illustration-user-group-icon.jpg"  data-holder-rendered="true">
         </div>
-        <img width="25%" height="25%" class="card-img-right flex-auto d-none d-md-block" src="https://st2.depositphotos.com/5266903/9616/v/950/depositphotos_96165688-stock-illustration-user-group-icon.jpg"  data-holder-rendered="true">
+      </div>
       </div>
     </div>
-    <!--<script th:src="@{/js/bootstrap.min.js}"></script>-->
-    <!--Ionicons-->
-    <script
-      type="module"
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"
-    ></script>
-    <script
-      nomodule
-      src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"
-    ></script>
 
     <script th:src="@{/js/toast.min.js}"></script>
 
