--- a/src/main/resources/templates/administrador/administradores.html
+++ b/src/main/resources/templates/administrador/administradores.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Enlaces</title>
+  <title>Administradores</title>
   <link rel="stylesheet" th:href="@{/css/style.css}">
   <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
   <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
@@ -24,19 +24,19 @@
 
     <div class="w-100">
       <div th:insert="~{fragments/navBar :: navBar}"></div>
+
+      <!-- contenido de pagina -->
       <div id="content">
         <div class="container d-flex align-items-center ">
-          <h1>Enlaces</h1>
-          <button class="btn btn-add ms-auto "> <a th:href="@{/users/create}">Registrar </a><i class="fa-solid fa-plus "></i></button>
+          <h1>Administradores</h1>
+          <button class="btn btn-add ms-auto "> <a th:href="@{/users/create/admin}">Registrar </a><i class="fa-solid fa-plus "></i></button>
         </div>
         <div class="container">
-
           <hr size="5px">
           <div class="container">
-            <table class="table " id="enlacesTable">
+            <table class="table " id="adminsTable">
               <thead>
                 <tr>
-                  <th scope="col"></th>
                   <th scope="col"></th>
                   <th scope="col"></th>
                   <th scope="col"></th>
@@ -47,22 +47,24 @@
               </thead>
               <tbody>
                 <tr th:each="tmpUser, iter : ${listUsers}">
-                  <th th:text="${iter.index + 1}" scope="row">1</th>
+                  <th th:text="${iter.index + 1}" scope="row"></th>
                   <td>
                     <img class="imgTable"
-                      src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                         th:if="${tmpUser.profilePicture != null}" th:src="@{'data:image/png;base64,' + #strings.encodeBase64(tmpUser.profilePicture)}"
                       alt="...">
+                    <img class="imgTable"
+                         th:if="${tmpUser.profilePicture == null}" th:src="@{'https://definicion.de/wp-content/uploads/2019/07/perfil-de-usuario.png'}"
+                         alt="...">
                   </td>
                   <td th:text="${tmpUser.name} + ' ' + ${tmpUser.lastname} + ' ' + ${tmpUser.surname}"></td>
-                  <td>Municipio</td>
                   <td th:text="${tmpUser.phone}"></td>
                   <td th:text="${tmpUser.email}"></td>
                   <td class="text-end">
                     <button type="button" class="btn bg-main btn-circle m-1"><i
                         class="fa-solid fa-power-off"></i></button>
                     <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-key"></i></button>
-                    <button type="button" class="btn bg-main btn-circle m-1"><a th:href="@{/users/edit/{id} (id=${tmpUser.id})}"><i
-                            class="fa-solid fa-pen-to-square"></i></a></button>
+                    <button type="button" class="btn bg-main btn-circle m-1"><i
+                        class="fa-solid fa-pen-to-square"></i></button>
                   </td>
                 </tr>
               </tbody>
@@ -70,22 +72,22 @@
           </div>
         </div>
       </div>
-    </div>
-  </div>
 
+    </div>
+
+  </div>
 
 
 
   <script th:src="@{/js/nav.js}"></script>
   <scrip th:src="@{/js/bootstrap.bundle.min.js}"></scrip>
-
   <script src="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.js"></script>
   <script>
     $(document).ready(function () {
-      $('#enlacesTable').DataTable();
+      $('#adminsTable').DataTable();
     });
 
-    var tableData = $('#enlacesTable').DataTable({
+    var tableData = $('#adminsTable').DataTable({
       ordering: false,
       language: {
         processing: "",
@@ -108,5 +110,4 @@
     });
   </script>
 </body>
-
 </html>
