--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -2,6 +2,7 @@
 <html>
 
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Iniciar sesión</title>
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
 		integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
@@ -9,23 +10,158 @@
 	<link rel="stylesheet" th:href="@{/css/toast.min.css}" />
 	<link th:href="@{/css/login/login.css}" rel="stylesheet" crossorigin="anonymous">
 </head>
+<style>
+	.btn-login {
+		background-color:[[${colorFondo}]]  !important;
+		color: rgb(255, 255, 255) !important;
+	}
+	.btn-login:hover {
+		background-color:#6495ED !important;
+		color: rgb(255, 255, 255) !important;
+	}
+	.help-text {
+		color: #ffffff !important;
+	}
+	.help-text:hover {
+		color: #ffffff !important;
+	}
+	.encabezado{
+		background-color: [[${colorFondo}]];
+		width: 100%;
+		height: 100px;
+	}
+	.container-fluid{
+		 background-color: #A3A3A3;
+		 width: 100%;
+		 height: 100%;
+	 }
+	body{
+		background: gray;
+		width: 100%;
+		height: 100%;
+	}
+	.imgBa{
+		background-image: url("../img/Fongo.jpg");
+	}
 
+	.encabezado .two{
+		margin: 15px 0 0 auto;
+	}
+	.card-Login{
+		background-color: #D7D7D7;
+		margin : 100px auto 0 auto;
+		width: 27em;
+		height: 500px;
+	}
+	.card{
+		background: transparent;
+		border: black 0px solid;
+		margin : 100px auto 0 auto;
+		width: 30em;
+		height: 500px;
+		display:flex;
+		justify-content: center;
+		align-items: center;
+	}
+	.card img{
+		width: 300px;
+		height: 300px;
+
+	}
+	form {
+		width: 100%;
+		max-width: 600px;
+		margin: 0 50px 0 -30px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		align-items: center;
+	}
+	form img{
+		margin-left: 35px;
+	}
+	.input{
+		width: 130%;
+	}
+	.form-group{
+		margin-top: 20px;
+	}
+	.button{
+		margin-top: 16px;
+		background: #632878;
+		color: [[${color_title}]];
+		width: 100px;
+	}
+	.encabezado{
+		display: flex;
+	}
+	.encabezado img{
+		width: 75px;
+		height: 75px;
+		margin: 15px 5px 5px 5px;
+	}
+	.encabezado h2{
+		display:flex;
+		justify-content: center;
+		align-items: center;
+		color: white;
+	}
+	@media (min-width: 1440px) {
+		.card-Login{
+			width: 40em;
+		}
+		form {
+			width: 150%;
+			max-width: 800px;
+			margin: 0 50px 0 -100px;
+			display: flex;
+			flex-direction: column;
+			justify-content: center;
+			align-items: center;
+		}
+		form img{
+			margin-left: 155px;
+		}
+		.input{
+			width: 200%;
+		}
+		.form-group{
+			margin-top: 20px;
+		}
+		.button{
+			margin-top: 50px;;
+			margin-left: 155px;
+			width: 150px;
+		}
+	}
+
+	@media (max-width: 922px) {
+		.card{
+			visibility: hidden;
+			display: none;
+		}
+		.card-Login{
+			width: 468px;
+			margin: 100px auto	;
+		}
+	}
+</style>
 <body style="background-color: #e9ecef;">
 <div class="container-fluid" >
 	<div class="row" >
 		<div class="col-12 encabezado">
-			<img th:src="@{/img/img.png}" alt="" >
+			<img th:src="${logo1}" alt="" >
 			<h2>Login</h2>
-			<img class="two " th:src="@{/img/img_1.png}" alt="" >
+			<img class="two " th:src="${logo2}" alt="" >
 		</div>
 		<div class="col-12 row imgBa"  style="background-image: url('../img/fongo.jpg');background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
   height: 100vh;">
-			<div class="col-6 card-Login row">
+			<div class="col-md-6 col-sm-12 card-Login row">
 				<form th:action="@{/login}" method="post"   >
 
-						<img th:src="@{/img/img_1.png}" width="150" height="150" class="img-Backgrund">
+						<img th:src="${logo2}" width="150" height="150" class="img-Backgrund">
 						<div class="form-group">
 							<label for="exampleInputEmail1">Correo :</label>
 							<input type="email" class="form-control input" name="username"  id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="correo@gmail.com">
@@ -41,11 +177,11 @@
 						<div th:if="${param.logout}">
 							You have been logged out.
 						</div>
-						<div><input type="submit" class="btn button" value="Login"/></div>
+						<div><input type="submit" class="btn button btn-login"  value="Login"/></div>
 				</form>
 			</div>
 			<div class="col-6 card">
-				<img th:src="@{/img/img.png}" alt="">
+				<img th:src="${logo1}" alt="">
 			</div>
 		</div>
 
@@ -83,7 +219,6 @@
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
 		integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
 		crossorigin="anonymous"></script>
-
 	<!-- Mostrar y ocultar contraseña input-->
 	<script>
 		function mostrarContrasena() {
@@ -97,23 +232,9 @@
 				document.getElementById('seePasswordButton').innerHTML = "<ion-icon name='eye'></ion-icon>";
 			}
 		}
+
 	</script>
-    <style>
-        .btn-login {
-            background-color:#4169E1  !important;
-            color: rgb(255, 255, 255) !important;
-        }
-        .btn-login:hover {
-            background-color:#6495ED !important;
-            color: rgb(255, 255, 255) !important;
-        }
-        .help-text {
-            color: #ffffff !important;
-        }
-        .help-text:hover {
-            color: #ffffff !important;
-        }
-    </style>
+
 </body>
 
 </html>
