--- a/src/main/resources/templates/administrador/dashboard.html
+++ b/src/main/resources/templates/administrador/dashboard.html
@@ -48,7 +48,7 @@
                          alt="...">
                   </div>
                   <div class="flex-grow-1 ms-3" style="font-size: 22px;">
-                    Nombre del administrador
+                    Nombre del enlace
                   </div>
                 </div>
               </div>
