--- a/src/main/resources/templates/category/list.html
+++ b/src/main/resources/templates/category/list.html
@@ -24,10 +24,10 @@
   <div th:insert="~{fragments/header :: header}"></div>
   <div class="container">
     <div class="card">
-      <div class="card-header">LISTADO DE Categorías</div>
+      <div class="card-header">LISTADO DE SERVICIOS PÚBLICOS</div>
       <div class="card-body">
         <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
-          <h5 class="card-title">Categorías</h5>
+          <h5 class="card-title">Servicios Públicos</h5>
           <div class="text-end">
             <a th:href="@{/category/create}" class="btn btn-primary mb-3">
               <ion-icon name="pencil"></ion-icon>&nbsp;<span class="d-sm-none d-md-none d-lg-inline d-xl-inline"> NUEVO
