--- a/src/main/resources/templates/enlace/dashboard.html
+++ b/src/main/resources/templates/enlace/dashboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>COMVE</title>
+    <title>SIGEV</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
@@ -20,19 +20,184 @@
       <div th:insert="~{fragments/navBar :: navBar}"></div>
       <button id="btnSide" type="button" class="btn bg-main btn-circle sticky-top m-2"><i class="fa-sharp fa-solid fa-bars"></i></button>
 
-      <div id="content" class="container ">
-        <div class="card flex-md-row mb-4 box-shadow h-md-250">
-          <div class="card-body d-flex flex-column align-items-start">
-            <h3 class="mb-0">
-              <a class="text-dark" >Bienvenido Enlace</a>
-            </h3>
-          </div>
-          <img width="25%" height="25%" class="card-img-right flex-auto d-none d-md-block" src="https://st2.depositphotos.com/5266903/9616/v/950/depositphotos_96165688-stock-illustration-user-group-icon.jpg"  data-holder-rendered="true">
+      <!-- contenido de pagina -->
+      <div id="content">
+        <div class="container d-flex align-items-center ">
+          <h1>Enlaces</h1>
+          <button class="btn btn-add ms-auto ">Registrar <i class="fa-solid fa-plus "></i></button>
         </div>
-      </div>
+        <div class="container">
+
+          <hr size="5px">
+          <div class="container">
+            <table class="table " id="enlacesTable">
+              <thead>
+              <tr>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+                <th scope="col"></th>
+              </tr>
+              </thead>
+              <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>
+                  <img class="imgTable"
+                       src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                       alt="...">
+                </td>
+                <td>Nombre del enlace</td>
+                <td>Municipio</td>
+                <td>7772356478</td>
+                <td>correo@ejemplo.com</td>
+                <td>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-power-off"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-key"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-pen-to-square"></i></button>
+                </td>
+              </tr>
+              <tr>
+                <th scope="row">1</th>
+                <td>
+                  <img class="imgTable"
+                       src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                       alt="...">
+                </td>
+                <td>Nombre del enlace</td>
+                <td>Municipio</td>
+                <td>7772356478</td>
+                <td>correo@ejemplo.com</td>
+                <td>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-power-off"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-key"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-pen-to-square"></i></button>
+                </td>
+              </tr><tr>
+                <th scope="row">1</th>
+                <td>
+                  <img class="imgTable"
+                       src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                       alt="...">
+                </td>
+                <td>Nombre del enlace</td>
+                <td>Municipio</td>
+                <td>7772356478</td>
+                <td>correo@ejemplo.com</td>
+                <td>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-power-off"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-key"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-pen-to-square"></i></button>
+                </td>
+              </tr><tr>
+                <th scope="row">1</th>
+                <td>
+                  <img class="imgTable"
+                       src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                       alt="...">
+                </td>
+                <td>Nombre del enlace</td>
+                <td>Municipio</td>
+                <td>7772356478</td>
+                <td>correo@ejemplo.com</td>
+                <td>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-power-off"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-key"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-pen-to-square"></i></button>
+                </td>
+              </tr><tr>
+                <th scope="row">1</th>
+                <td>
+                  <img class="imgTable"
+                       src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                       alt="...">
+                </td>
+                <td>Nombre del enlace</td>
+                <td>Municipio</td>
+                <td>7772356478</td>
+                <td>correo@ejemplo.com</td>
+                <td>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-power-off"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-key"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-pen-to-square"></i></button>
+                </td>
+              </tr><tr>
+                <th scope="row">1</th>
+                <td>
+                  <img class="imgTable"
+                       src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                       alt="...">
+                </td>
+                <td>Nombre del enlace</td>
+                <td>Municipio</td>
+                <td>7772356478</td>
+                <td>correo@ejemplo.com</td>
+                <td>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-power-off"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-key"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-pen-to-square"></i></button>
+                </td>
+              </tr><tr>
+                <th scope="row">1</th>
+                <td>
+                  <img class="imgTable"
+                       src="https://i0.wp.com/tracklist.com.br/wp-content/uploads/2022/08/lana-1.png?fit=1200%2C675&ssl=1"
+                       alt="...">
+                </td>
+                <td>Nombre del enlace</td>
+                <td>Municipio</td>
+                <td>7772356478</td>
+                <td>correo@ejemplo.com</td>
+                <td>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-power-off"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-key"></i></button>
+                  <button type="button" class="btn bg-main btn-circle m-1"><i class="fa-solid fa-pen-to-square"></i></button>
+                </td>
+              </tr>
+
+              </tbody>
+            </table>
+          </div>
+        </div>
       </div>
     </div>
 
+  </div>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+          integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+          crossorigin="anonymous"></script>
+  <script src="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.js"></script>
+  <script>
+    $(document).ready(function () {
+      $('#enlacesTable').DataTable();
+    });
+
+    var tableData = $('#enlacesTable').DataTable({
+      ordering: false,
+      language: {
+        processing: "",
+        search: "Buscar:",
+        lengthMenu: "Mostrar _MENU_ registros",
+        info: "Mostrando _START_ a _END_ de _TOTAL_ registros",
+        infoEmpty: "No hay registros para mostrar",
+        infoFiltered: "(filtrado de _MAX_ entradas totales)",
+        infoPostFix: "",
+        loadingRecords: "Cargando...",
+        zeroRecords: "No se encontraron registros coincidentes",
+        emptyTable: "Aucune donnée disponible dans le tableau",
+        paginate: {
+          first: "Primero",
+          previous: "Anterior",
+          next: "Siguiente",
+          last: "Último"
+        }
+      }
+    });
+  </script>
     <script th:src="@{/js/toast.min.js}"></script>
 
     <script th:if="${msg_success != null}">
