--- a/src/main/resources/templates/administrador/create.html
+++ b/src/main/resources/templates/administrador/create.html
@@ -63,7 +63,7 @@
                                     </div>
                                     <div class="col-4 mt-3">
                                         <label class="form-label">Imagen de perfil</label>
-                                        <input name="profilePicture" class="form-control" type="file" accept="image/*">
+                                        <input name="picture" class="form-control" type="file" accept="image/*">
                                         <small class="form-text text-danger" th:if="${#fields.hasErrors('profilePicture')}" th:errors="*{profilePicture}"></small>
                                     </div>
                                     <div class="col-6 mt-3">
