--- a/src/main/resources/templates/city/municipios.html
+++ b/src/main/resources/templates/city/municipios.html
@@ -8,6 +8,7 @@
     <title>Municipios</title>
     <link rel="stylesheet" th:href="@{/css/style.css}">
     <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
+    <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
         integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
@@ -39,6 +40,7 @@
                                     <th scope="col"></th>
                                     <th scope="col"></th>
                                     <th scope="col"></th>
+                                    <th scope="col"></th>
 
                                 </tr>
                             </thead>
@@ -47,13 +49,17 @@
                                     <th th:text="${iter.index + 1}" class="text-center"></th>
                                     <td>
                                         <img class="municipioTable"
-                                            src="https://upload.wikimedia.org/wikipedia/commons/6/6d/Escudo_Emiliano_Zapata.jpg"
-                                            alt="...">
+                                             th:if="${tmpCity.shield != null}" th:src="@{/docs/{i} (i = ${tmpCity.shield})}"
+                                             alt="...">
+                                        <img class="municipioTable"
+                                             th:if="${tmpCity.shield == null}" th:src="@{'https://www.google.com/url?sa=i&url=https%3A%2F%2Fwww.flaticon.es%2Ficono-gratis%2Finsertar-icono-de-imagen_16410&psig=AOvVaw1nXMeW0pmQeDMTgjzE6V1e&ust=1681293806490000&source=images&cd=vfe&ved=0CBEQjRxqFwoTCOCA8eXJof4CFQAAAAAdAAAAABAI'}"
+                                             alt="...">
                                     </td>
                                     <td th:text="${tmpCity.name}" class="text-start"></td>
+                                    <td class="text-end"><h6 th:class="${tmpCity.status == 1 ? 'text-success' : 'text-danger'}"><i  class="fa-solid fa-circle"></i></h6></td>
                                     <td class="text-end">
                                         <button type="button" class="btn bg-main btn-circle m-1"><a th:href="@{/city/desactivate/{id} (id=${tmpCity.id})}"><i
-                                                class="fa-solid fa-trash"></i></a></button>
+                                                class="fa-solid fa-power-off"></i></a></button>
                                         <button type="button" class="btn bg-main btn-circle m-1"> <a th:href="@{/city/edit/{id} (id=${tmpCity.id})}"><i
                                                 class="fa-solid fa-pen-to-square"></i></a></button>
                                     </td>
@@ -74,7 +80,20 @@
 
     <script th:src="@{/js/nav.js}"></script>
     <scrip th:src="@{/js/bootstrap.bundle.min.js}"></scrip>
+    <script th:src="@{/js/toast.min.js}"></script>
     <script src="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.js"></script>
+    <script th:if="${msg_success != null}">
+        new Toast({
+            message: "[[${msg_success}]]",
+            type: "success",
+        });
+    </script>
+    <script th:if="${msg_error != null}">
+        new Toast({
+            message: "[[${msg_error}]]",
+            type: "danger",
+        });
+    </script>
     <script>
         $(document).ready(function () {
             $('#municipiosTable').DataTable();
@@ -92,7 +111,7 @@
                 infoPostFix: "",
                 loadingRecords: "Cargando...",
                 zeroRecords: "No se encontraron registros coincidentes",
-                emptyTable: "Aucune donnée disponible dans le tableau",
+                emptyTable: "No hay registros para mostrar",
                 paginate: {
                     first: "Primero",
                     previous: "Anterior",
