--- a/src/main/resources/templates/users/edit.html
+++ b/src/main/resources/templates/users/edit.html
@@ -5,70 +5,92 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Registrar Enlaces</title>
+    <title>Editar Enlace</title>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+    <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}">
     <link rel="stylesheet" th:href="@{/css/toast.min.css}" />
-    <!-- <link rel="stylesheet" th:href="@{/css/bootstrap.min.css}"> -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css"
-        integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
-
-    <style>
-        li {
-            text-decoration: none;
-        }
-    </style>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css"
+          integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ=="
+          crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link href="https://cdn.datatables.net/v/bs5/jq-3.6.0/dt-1.13.4/datatables.min.css" rel="stylesheet" />
 </head>
 
 <body>
-    <div th:insert="~{fragments/header :: header}"></div>
-    <div class="container">
-        <div class="card">
-            <div class="card-header">REGISTRAR</div>
-            <div class="card-body">
-                <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
-                    <h5 class="card-title">NUEVO ENLACE</h5>
-                </div>
-                <form th:action="@{/users/recover/{id} (id=${user.id})}" method="POST" th:object="${recoverPasswordDto}">
-                    <div class="col">
-                        <div class="row">
-                            <div class="col-6 mt-3 mb-3">
-                                <label class="form-label">Nueva Contraseña</label>
-                                <input id="pass1" class="form-control" type="password" minlength="5" maxlength="255"
-                                    placeholder="*****" onchange="checkInputs()" required>
-                            </div>
-                            <div class="col-6 mt-3 mb-3">
-                                <label class="form-label">Confirmar Nueva Contraseña</label>
-                                <input id="pass2" class="form-control" type="password" minlength="5" maxlength="255"
-                                    placeholder="*****" th:field="*{password}" onchange="checkInputs()" required>
-                            </div>
+<div class="d-flex">
+    <div th:insert="~{fragments/sideBar :: sideBar}"></div>
+
+    <div class="w-100">
+        <div th:insert="~{fragments/navBar :: navBar}"></div>
+        <div id="content">
+            <div class="container">
+                <div class="card">
+                    <div class="card-header">MODIFICAR</div>
+                    <div class="card-body">
+                        <div class="col d-flex justify-content-between bg-white border-bottom mb-2">
+                            <h5 class="card-title">MODIFICAR ENLACE</h5>
                         </div>
-                    </div>
-                    <div class="card-footer">
-                        <div class="row float-right">
-                            <div class="col float-right">
-                                <a th:href="@{/users/list}" class="btn btn-secondary">
-                                    <ion-icon name="arrow-back-outline"></ion-icon>&nbsp;<span
-                                        class="d-sm-none d-md-none d-lg-inline d-xl-iniline"> Cancelar</span>
-                                </a>
-                                <button id="btnReg" onclick="checkInputs()" class="btn btn-primary" type="submit"
-                                    disabled>
-                                    <ion-icon name="checkmark"></ion-icon>&nbsp;<span
-                                        class="d-sm-none d-md-none d-lg-inline d-xl-iniline">
+                        <form th:action="@{/users/update/{id} (id=${user.id})}" method="POST" th:object="${userDto}" enctype="multipart/form-data">
+                            <div class="col">
+                                <div class="row">
+                                    <div class="col-4">
+                                        <label class="form-label">Nombre(s)</label>
+                                        <input id="name" class="form-control" type="text" minlength="2" maxlength="150"
+                                               placeholder="Nombre(s)" th:value="${user.name}" th:field="*{name}" onchange="checkInputs()" required>
+                                        <small class="form-text text-danger" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></small>
+                                    </div>
+                                    <div class="col-4">
+                                        <label class="form-label">Primer Apellido</label>
+                                        <input id="lastname" class="form-control" type="text" minlength="2" maxlength="150"
+                                               placeholder="Primer Apellido" th:value="${user.lastname}" th:field="*{lastname}" onchange="checkInputs()"
+                                               required>
+                                        <small class="form-text text-danger" th:if="${#fields.hasErrors('lastname')}" th:errors="*{lastname}"></small>
+                                    </div>
+                                    <div class="col-4">
+                                        <label class="form-label">Segundo Apellido</label>
+                                        <input id="surname" class="form-control" type="text" minlength="2" maxlength="150"
+                                               placeholder="Segundo Apellido" th:field="*{surname}" th:value="${user.surname}" onchange="checkInputs()">
+                                        <small class="form-text text-danger" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></small>
+                                    </div>
+                                    <div class="col-4 mt-3 mb-3">
+                                        <label class="form-label">Teléfono</label>
+                                        <input id="phone" name="phone" class="form-control" type="text" minlength="10" maxlength="10"
+                                               placeholder="Teléfono" th:value="${user.phone}" th:field="*{phone}" onchange="checkInputs()" required>
+                                        <div th:if="${bindingResult}">
+                                            <small class="form-text text-danger" th:if="${#fields.hasErrors('phone')}" th:errors="*{phone}"></small>
+                                        </div>
+                                    </div>
+                                    <div class="col-4 mt-3 mb-3">
+                                        <label class="form-label">Imagen de perfil</label>
+                                        <input th:value="@{/docs/{i} (i = ${user.profilePicture})}" name="picture" class="form-control" type="file" accept="image/*">
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="card-footer">
+                                <div class="row float-right">
+                                    <div class="col float-right">
+                                        <a th:href="@{/administrador/dashboard}" class="btn btn-secondary">
+                                            <ion-icon name="arrow-back-outline"></ion-icon>&nbsp;<span
+                                                class="d-sm-none d-md-none d-lg-inline d-xl-iniline"> Cancelar</span>
+                                        </a>
+                                        <button id="btnReg" class="btn btn-main" type="submit">
+                                            <ion-icon name="checkmark"></ion-icon>&nbsp;<span
+                                                class="d-sm-none d-md-none d-lg-inline d-xl-iniline">
                                         Guardar
                                     </span>
-                                </button>
+                                        </button>
+                                    </div>
+                                </div>
                             </div>
-                        </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
         </div>
     </div>
-    <!-- <script th:src="@{/js/bootstrap.min.js}"></script> -->
-    <!--Ionicons-->
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+</div>
 
+    <script th:src="@{/js/nav.js}"></script>
+    <scrip th:src="@{/js/bootstrap.bundle.min.js}"></scrip>
     <script th:src="@{/js/toast.min.js}"></script>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
